<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_core_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        tools:text="Block: 1" />

    <TextView
        android:id="@+id/text_core_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_core_block"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        tools:text="Merlin1A" />

    <TextView
        android:id="@+id/text_core_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_core_name"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        tools:text="2007-03-21T01:10:00.000Z" />

    <TextView
        android:id="@+id/text_core_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="true"
        tools:text="lost" />

</RelativeLayout>