<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="General Preferences">

        <ListPreference
                android:key="prefs_refresh_interval"
                android:title="@string/settings_refresh_interval_title"
                android:summary="%s"
                android:dialogTitle="@string/settings_refresh_interval_dialog_title"
                android:entries="@array/settings_refresh_interval_entries"
                android:entryValues="@array/settings_refresh_interval_values"
                android:defaultValue="3"/>

        <ListPreference
            android:key="prefs_dark_theme"
            android:title="@string/settings_dark_mode_title"
            android:summary="%s"
            android:entries="@array/dark_mode_entries"
            android:entryValues="@array/dark_mode_values"
            android:defaultValue="0"
            />

        <SwitchPreference
            android:key="prefs_notifications_upcoming_launches"
            android:title="@string/upcoming_launches_notifications"
            android:summaryOn="@string/notifications_enabled"
            android:summaryOff="@string/notifications_disabled"
            android:defaultValue="false"/>




    </PreferenceCategory>

</PreferenceScreen>